deploy: a0a3fab07a713b52d5a090c848509b9ef4c27121

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-93112f4d.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-96ca196c.js">
+		<link rel="modulepreload" href="./_app/immutable/start-9ea42879.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-cc9383fa.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-60d33e57.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-54e13e59.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-0a023251.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-7d9739ab.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths-21044734.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-ad18eae5.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-d72cf928.js">
@@ -33,21 +33,25 @@
 <li class="bx--list__item">
 <a href="/posts/I_kwDOItWIs85aYy4e" class="bx--link     ">義勇軍進行曲
     </a>
+		</li>
+<li class="bx--list__item">
+<a href="/posts/I_kwDOItWIs85aY0sw" class="bx--link     ">The Star-Spangled Banner
+    </a>
 		</li></ul></div>
 			<div class="bx--col-sm-8 bx--col-md-8 bx--col-lg-8"><p>Github SaaSを利用したブログです。</p></div></div></div></main>
 
 
-		<script type="module" data-sveltekit-hydrate="rtwkdu">
-			import { start } from "./_app/immutable/start-96ca196c.js";
+		<script type="module" data-sveltekit-hydrate="31vyfc">
+			import { start } from "./_app/immutable/start-9ea42879.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="rtwkdu"]').parentNode,
-				version: "1673098842663",
+				target: document.querySelector('[data-sveltekit-hydrate="31vyfc"]').parentNode,
+				version: "1673103174250",
 				hydrate: {
 					node_ids: [0, 2],
-					data: [{type:"data",data:{issues:[{status:"作成完了",id:"I_kwDOItWIs85aYy4e",title:"義勇軍進行曲"}]},uses:{}},null],
+					data: [{type:"data",data:{issues:[{status:"作成完了",id:"I_kwDOItWIs85aYy4e",title:"義勇軍進行曲"},{status:"作成完了",id:"I_kwDOItWIs85aY0sw",title:"The Star-Spangled Banner"}]},uses:{}},null],
 					form: null
 				}
 			});
